@@ -4233,7 +4233,7 @@ public class TownCommand extends BaseCommand implements CommandExecutor {
 		/*
 		 * This is run async because it will ping the economy plugin for the town bank value.
 		 */
-		Bukkit.getScheduler().runTaskAsynchronously(plugin, () -> TownyMessaging.sendStatusScreen(sender, TownyFormatter.getStatus(town, Translation.getLocale(sender))));
+		Bukkit.getScheduler().runTaskAsynchronously(plugin, () -> TownyMessaging.sendStatusScreen(sender, TownyFormatter.getStatus(town, sender)));
 	}
 
 	private void townResList(CommandSender sender, String[] args) throws TownyException {
